# irssi-otr

./: configure.ac
src/: Makefile.am  cmd.c  cmd.h  irssi-otr.h  key.c  key.h  module.c  otr-ops.c  otr.c  utils.c
